dartagnan/src/test/resources/spirv-clang/benign_race_tests/pass/writeafterread.spv.dis
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 9
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpDecorate %7 FuncParamAttr NoCapture
       %uint = OpTypeInt 32 0
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint
          %6 = OpFunction %void Pure %5
          %7 = OpFunctionParameter %_ptr_Workgroup_uint
          %8 = OpLabel
               OpReturn
               OpFunctionEnd
