dartagnan/src/test/resources/spirv-clang/benign_race_tests/fail/writeafterread_addition.spv.dis
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 12
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpDecorate %7 FuncParamAttr NoCapture
       %uint = OpTypeInt 32 0
     %uint_1 = OpConstant %uint 1
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint
          %6 = OpFunction %void None %5
          %7 = OpFunctionParameter %_ptr_Workgroup_uint
          %8 = OpLabel
          %9 = OpLoad %uint %7 Aligned 4
         %11 = OpIAdd %uint %9 %uint_1
               OpStore %7 %11 Aligned 4
               OpReturn
               OpFunctionEnd
